src/test/deca/etapeB/valid/divide_float.deca
// Description:
//   Test de la division avec des flottants
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    float a = 5/2;
    float b = 23.455/3;
    float c = 55/4;
}
