src/test/deca/etapeB/invalid/bad_cast.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 13 : cast impossible
// 
// Historique:
//    cree le 01/01/2016

{
   int a;
   boolean b;
   b = (int) a;

}
